fix toastr container overlap issue

--- a/client/src/styles/_toastr.scss
+++ b/client/src/styles/_toastr.scss
@@ -1,4 +1,5 @@
 #toast-container {
+  max-width: 70%;
 
   &.toast-top-center {
     left: 50%;
